Finally fix spacing for image fans.

--- a/main/static/css/custom_ckeditor.css
+++ b/main/static/css/custom_ckeditor.css
@@ -5,8 +5,6 @@
 
 .image-fan {
     overflow: visible;
-    height: 100%;
-    width: 100%;
     --base-rotation: 10;
     --hover-rotation: 1;
 }
